WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120545
warning: unused parameter ‘point’ and unused parameter ‘area' in EwkView.cpp:1390
https://bugs.webkit.org/show_bug.cgi?id=120545
Summary
warning: unused parameter ‘point’ and unused parameter ‘area' in EwkView.cp...
Santosh Mahto
Reported
2013-08-30 12:30:28 PDT
Need to guard with UNUSED_PARAM
Attachments
Patch
(1.31 KB, patch)
2013-08-30 12:35 PDT
,
Santosh Mahto
no flags
Details
Formatted Diff
Diff
patch for landing
(1.28 KB, patch)
2013-08-31 11:19 PDT
,
Santosh Mahto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Santosh Mahto
Comment 1
2013-08-30 12:35:42 PDT
Created
attachment 210149
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2013-08-31 07:07:55 PDT
Comment on
attachment 210149
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210149&action=review
> Source/WebKit2/ChangeLog:3 > + warning: unused parameter âpointâ and unused parameter âarea' in EwkView.cpp:1390
This line seems to have a funny encoding.
Santosh Mahto
Comment 3
2013-08-31 11:19:18 PDT
Created
attachment 210198
[details]
patch for landing
WebKit Commit Bot
Comment 4
2013-08-31 17:20:11 PDT
Comment on
attachment 210198
[details]
patch for landing Clearing flags on attachment: 210198 Committed
r154934
: <
http://trac.webkit.org/changeset/154934
>
WebKit Commit Bot
Comment 5
2013-08-31 17:20:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug