warning: unused parameter point and area in EwkView.cpp:1390 https://bugs.webkit.org/show_bug.cgi?id=120545

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-08-31
Reviewed by Darin Adler.

* UIProcess/API/efl/EwkView.cpp:
(EwkView::didFindZoomableArea): Added UNUSED_PARAM.

Canonical link: https://commits.webkit.org/138560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154934 268f45cc-cd09-0410-ab3c-d52691b4dbfc